--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "document": true
   },
   "rules": {
+    "no-nested-ternary": 0,
     "import/no-extraneous-dependencies": 0,
     "no-unused-vars": 0,
     "no-unused-expressions": 0,
