--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.28",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/styled-components": "^5.1.7",
     "axios": "^0.21.1",
     "eslint": "^6.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "typescript": "^4.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
