--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,7 @@
 {
+  "parser": "@typescript-eslint/parser",
   "extends": ["airbnb", "prettier", "prettier/react", "plugin:react/recommended"],
+  "plugins": ["@typescript-eslint"],
   "env": {
     "jest": true
   },
@@ -14,15 +16,19 @@
     "no-plusplus": 0,
     "import/prefer-default-export": 0,
     "react/jsx-filename-extension": [1, {
-      "extensions": [".js"]
+      "extensions": [".js", ".jsx", ".ts", ".tsx"]
     }]
   },
   "settings": {
-    "import/resolver": {
-      "node": {
-        "paths": ["src"],
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
-      }
-    }
+    
+    "import/extensions": [".js",".jsx",".ts",".tsx"],
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts",".tsx"]
+     },
+     "import/resolver": {
+         "node": {
+             "extensions": [".js",".jsx",".ts",".tsx"]
+         }
+     }
   }
 }
