Fix absolute path bug

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,16 +17,17 @@
     "import/prefer-default-export": 0,
     "react/jsx-filename-extension": [1, {
       "extensions": [".js", ".jsx", ".ts", ".tsx"]
-    }]
+    }],
+    "no-use-before-define": "off"
   },
   "settings": {
-    
     "import/extensions": [".js",".jsx",".ts",".tsx"],
     "import/parsers": {
       "@typescript-eslint/parser": [".ts",".tsx"]
      },
      "import/resolver": {
          "node": {
+             "paths": ["src"],
              "extensions": [".js",".jsx",".ts",".tsx"]
          }
      }
