--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "document": true
   },
   "rules": {
+    "react/prop-types": 0,
     "no-nested-ternary": 0,
     "import/no-extraneous-dependencies": 0,
     "no-unused-vars": 0,
