--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/react": "^5.3.19",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
+    "@types/react-transition-group": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "eslint-config-airbnb": "^18.2.0",
